Better mobile sidebar. Menu is fixed. Choosing a menu item closes the sidebar. Padding of content is consistent. On resize, closes menu. Bug fix: menu no longer disappears when scrolling on iOS.

--- a/app/css/media_queries.scss
+++ b/app/css/media_queries.scss
@@ -1,6 +1,18 @@
 /* Overrides for mobile */
 
 @media #{$small-only} {
+  .move-right {
+    /*
+    aside {
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+    */
+    .inner-wrap {
+      margin-left: 0;
+    }
+  }
   .row {
     max-width: 100%;
   }
